<resources>
    <string name="app_name">Proyecto_Movil</string>
    <string name="title_activity_principal" translatable="false">Principal</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_foro">Foros</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_salir">Salir</string>
    <string name="menu_noticiasapp">Noticias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>